--- a/src/components/error/Error.module.css
+++ b/src/components/error/Error.module.css
@@ -1,9 +1,5 @@
 @import "../../index.css";
 
-* {
-  color: var(--grey);
-}
-
 .main {
   display: flex;
   flex-direction: column;
