--- a/src/components/quantity-selector/QuantitySelector.module.css
+++ b/src/components/quantity-selector/QuantitySelector.module.css
@@ -4,10 +4,8 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  border: 1px solid var(--light-grey);
   border-radius: 8px;
   padding: 0.25rem;
-  background-color: var(--beige);
   width: fit-content;
 }
 
