--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   --dark-grey: #1b1b1b;
   --beige: #f3e1d8;
@@ -26,15 +25,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: var(--color-text);
-  text-decoration: inherit;
-}
-a:hover {
-  color: var(--color-accent);
-}
-
 body {
   margin: 0;
   display: flex;
@@ -46,7 +36,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: var(--grey);
 }
 
 button {
@@ -70,9 +59,29 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #302823;
     background-color: #ffffff;
   }
+  a:hover {
+    color: #ff6f3c;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #fff9eb;
+    background-color: #1d1c1afd;
+    border-bottom: var(--light-grey);
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
+
   a:hover {
     color: #ff6f3c;
   }
