--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -16,7 +16,6 @@
   font-weight: bold;
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
-  border-bottom: 2px solid var(--dark-grey);
   text-align: left;
 }
 
@@ -43,12 +42,10 @@
 .cartItem h4 {
   font-size: 1rem;
   margin: 0;
-  color: var(--grey);
 }
 
 .cartItem p {
   font-size: 0.9rem;
-  color: var(--grey);
   margin: 0.2rem 0;
 }
 
@@ -84,7 +81,6 @@
 .total {
   margin-top: 2rem;
   padding: 1.5rem;
-  background-color: var(--beige);
   border: 1px solid var(--orange);
   border-radius: 8px;
   grid-row: 1/2;
@@ -106,7 +102,6 @@
 .total p {
   font-size: 0.9rem;
   margin-bottom: 1rem;
-  color: var(--grey);
   text-align: left;
 }
 
@@ -155,10 +150,6 @@
   justify-content: center;
   align-items: center;
   height: 80vh;
-}
-
-.emptyCart h1 {
-  color: var(--grey);
 }
 
 @media (max-width: 1000px) {
